--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name":"canbus(gdp)启动",
+            "name":"lidar2camera(gdb)启动",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceRoot}/bin/run_lidar2camera",
